<resources>
    <string name="app_name" translatable="false">Arteva edu tech</string>
    <string name="drawer_open" translatable="false">Open navigation drawer</string>
    <string name="drawer_close" translatable="false">Close navigation drawer</string>
    <string name="completed" translatable="false">Congratulations!!</string>
    <string name="congratulations" translatable="false">Congratulations!!</string>
    <string name="time_challenge_msg" translatable="false">You have completed challenge in&#160;</string>
    <string name="sec" translatable="false">&#160;sec&#160;</string>
    <string name="secbattle" translatable="false">sec</string>
    <string name="not_completed" translatable="false">Better Luck Next Tme</string>
    <string name="select_level" translatable="false">Select Level</string>
    <string name="select_category" translatable="false">Select Category</string>
    <string name="select_sub_category" translatable="false">Select SubCategory</string>
    <string name="self_challenge" translatable="false">Self Challenge</string>
    <string name="daily_quiz" translatable="false">Daily Quiz</string>
    <string name="account_delete" translatable="false">Account Delete?</string>
    <string name="delete_msg" translatable="false">Are you sure you want to delete your Account?\nThis action cannot be undone.After your account deleted , you will be logged out and all other  active session will be terminated.</string>
    <string name="random_quiz" translatable="false">Random Quiz</string>
    <string name="contest" translatable="false">Contest</string>
    <string name="sound" translatable="false">Sound</string>
    <string name="Username" translatable="false">Username</string>
    <string name="share_app" translatable="false">Share App</string>
    <string name="update_msg_1" translatable="false">Update the app for a batter experience!</string>
    <string name="not_now" translatable="false">Not Now</string>
    <string name="update_now" translatable="false">Update</string>
    <string name="update_alert" translatable="false">Update Alert</string>
    <string name="vibration" translatable="false">Vibration</string>
    <string name="rateapp" translatable="false">Rate Us</string>
    <string name="bg_music" translatable="false">Background Music</string>
    <string name="share_via" translatable="false">Share via</string>
    <string name="next_play" translatable="false">Play Next Level</string>
    <string name="play_again" translatable="false">Play Again</string>
    <string name="quite" translatable="false">Home</string>
    <string name="review_answer" translatable="false">Review</string>
    <string name="share_score" translatable="false">Share Score</string>
    <string name="share_result" translatable="false">Share Result</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="play_next" translatable="false">Play Again</string>
    <string name="lets_play" translatable="false">Let\'s Play</string>
    <string name="instruction" translatable="false">Instruction</string>
    <string name="coinstore" translatable="false">Coin Store</string>
    <string name="msg_no_internet" translatable="false">No internet connection!!</string>
    <string name="no_category" translatable="false">category not available!!</string>
    <string name="no_data" translatable="false">data not found!!</string>
    <string name="ttl_ques" translatable="false">Ques :&#160;</string>
    <string name="select_no_of_question" translatable="false">Select Number Of Questions</string>
    <string name="select_time_period" translatable="false">Select Time Period in Minutes</string>
    <string name="no_sub_category" translatable="false">sub category not available!!</string>
    <string name="no_enough_question" translatable="false">Not enough questions, to play level.</string>
    <string name="no_enough_questiondaily" translatable="false">Daily Quiz not Available or you already played Daily Quiz!!</string>
    <string name="retry" translatable="false">RETRY</string>
    <string name="title" translatable="false">Title</string>
    <string name="lets_start" translatable="false">Let\'s Start</string>
    <string name="hello" translatable="false">Hello,&#160;</string>
    <string name="_coins" translatable="false">&#160;Coins</string>
    <string name="bm_empty_msg" translatable="false">bookmark not available</string>
    <string name="empty_alert_msg" translatable="false">Field should not be empty</string>
    <string name="a" translatable="false">A</string>
    <string name="b" translatable="false">B</string>
    <string name="c" translatable="false">C</string>
    <string name="d" translatable="false">D</string>
    <string name="e" translatable="false">E</string>
    <string name="un_attend" translatable="false">Un-Attempted</string>
    <string name="answer" translatable="false">answer</string>
    <string name="answerbookmark" translatable="false">Answer : </string>
    <string name="extra_note" translatable="false">Extra Note</string>
    <string name="note" translatable="false">Note</string>
    <string name="ok" translatable="false">OKAY</string>
    <string name="ad_attribution" translatable="false">Ad</string>
    <string name="report" translatable="false">Report Question</string>
    <string name="cancel" translatable="false">Cancel</string>
    <string name="submit" translatable="false">Submit</string>
    <string name="review" translatable="false">Review</string>
    <string name="result" translatable="false">Result</string>
    <string name="title_already_used" translatable="false">Life Line Already Used !!</string>
    <string name="msg_lifeline_used" translatable="false">You can use only once per level</string>
    <string name="self_challenge_sub_msg" translatable="false">Are you sure ?\nYou want to submit this test?</string>
    <string name="true_ans" translatable="false">True Ans: </string>
    <string name="zero" translatable="false">0</string>
    <string name="challenge_time" translatable="false">Challenge Time&#160;</string>
    <string name="loading" translatable="false">Loading…</string>
    <string name="bookmark_list" translatable="false">Bookmark List</string>
    <string name="level_not_available" translatable="false">Level not available</string>
    <string name="go_back" translatable="false">Go Back</string>
    <string name="signup" translatable="false">CREATE ACCOUNT</string>
    <string name="email_alert_1" translatable="false">Please enter email address</string>
    <string name="email_alert_2" translatable="false">Please enter valid email address</string>
    <string name="from_camera" translatable="false">Capture from Camera</string>
    <string name="account_deactivate" translatable="false">Your Account is deactivate by admin</string>
    <string name="select_language" translatable="false">Select Language</string>
    <string name="refer_share_msg_1" translatable="false">I have earned coins using&#160;</string>
    <string name="refer_share_msg_2" translatable="false">&#160;app. you can also earn coin by downloading app from below link and enter referral code while login-&#160; </string>
    <string name="msg_enough_coin" translatable="false">Not Enough Coins !!</string>
    <string name="coin_message1" translatable="false">You don\'t have enough coins. You need at least&#160;</string>
    <string name="coin_message2" translatable="false">&#160;coins to use this lifeline. \n\nWatch a short video &amp; get free coins</string>
    <string name="not_enough_coin" translatable="false">You don\'t have enough coins.</string>
    <string name="skip" translatable="false">Skip</string>
    <string name="msg_watch_video" translatable="false">Watch Now</string>
    <string name="attended" translatable="false">Attended Ques</string>
    <string name="correct_ans" translatable="false">Correct Ans</string>
    <string name="correct" translatable="false">Correct</string>
    <string name="incorrect" translatable="false">InCorrect</string>
    <string name="color_code" translatable="false">Color Code</string>
    <string name="report_hint" translatable="false">Type a message</string>
    <string name="about_us" translatable="false">About Us</string>
    <string name="exit_msg" translatable="false">Do you want to exit the level?</string>
    <string name="exit_msg_quiz" translatable="false">Do you want to exit the Quiz?</string>
    <string name="bookmark_play" translatable="false">Play Bookmark</string>
    <string name="all_complete_msg" translatable="false">You have Completed All Questions !!</string>
    <string name="leave_msg_1" translatable="false">Are you sure?</string>
    <string name="leave_msg_2" translatable="false">You haven\'t submitted this test yet. Are you sure you wan to leave?</string>
    <string name="battle_msg1" translatable="false">\u25CF This will allow player vs player battle</string>
    <string name="battle_msg2" translatable="false">\u25CF If not found any player to a battle, you can battle with the robot</string>
    <string name="battle_msg3" translatable="false">\u25CF For battle, same questions will be served for both the player
        &amp; the winner will be declared base on no of right answers</string>
    <string name="has_option" translatable="false">Quiz game has 4 options</string>
    <string name="msg_right" translatable="false">For each right answer 5 points will be given.</string>
    <string name="msg_wrong" translatable="false">minus 2 points for each question</string>
    <string name="msg_lifeline" translatable="false">Use of Lifeline  : You can use only once per level</string>
    <string name="msg_fifty_fifty" translatable="false">50 – 50 : for remove two option out of Four(deduct 4 coins ).</string>
    <string name="msg_skip" translatable="false">Skip question: you can pass question without minus points(deduct 2 coins).</string>
    <string name="msg_opinion" translatable="false">Audience poll: use audience paul for check other users choose option(deduct 4 coins).</string>
    <string name="msg_reset" translatable="false">Reset timer: Reset timer again if you needed more time score (deduct 2 coins).</string>
    <string name="msg_leaderboard" translatable="false">You can compare your score with other users of apps</string>
    <string name="leaderboard" translatable="false">Leaderboard</string>
    <string name="textsize_dialog_lbl_fontsize" translatable="false">Font Size</string>
    <string name="font_size" translatable="false">Font Size</string>
    <string name="level_locked" translatable="false">Level is Locked</string>
    <string name="update_profile" translatable="false">Update Profile</string>
    <string name="user_statistics" translatable="false">User Statistics</string>
    <string name="name" translatable="false">Name</string>
    <string name="mobile" translatable="false">Mobile Number</string>
    <string name="back" translatable="false">BACK</string>
    <string name="play_quiz" translatable="false">Quiz Zone</string>
    <string name="play" translatable="false">Play</string>
    <string name="battle_quiz" translatable="false">Battle Quiz</string>
    <string name="bookmarks" translatable="false">Bookmarks</string>
    <string name="notification" translatable="false">Notification</string>
    <string name="show_answer" translatable="false">Show Answer</string>
    <string name="from_library" translatable="false">Choose from Library</string>
    <string name="email" translatable="false">Email</string>
    <string name="term_privacy" translatable="false">By Logging in / Signing Up, you agree to our \nTerms of Service and Privacy Policy</string>
    <string name="phone_num" translatable="false">Phone Number</string>
    <string name="view_all" translatable="false"><u>View All</u></string>
    <string name="quiz_zone" translatable="false">Quiz Zone</string>
    <string name="mcq_zone">MCQ Zone</string>
    <string name="video_zone">Video Zone</string>
</resources>