<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg"
    android:gravity="bottom"
    android:orientation="vertical">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/onboardingItemLottie"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scaleType="fitCenter"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/mainLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/onboarding1" />

    <RelativeLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="-50dp"
        android:background="@drawable/bottomdailoggradient"
        android:backgroundTint="@color/colorPrimaryDark"
        app:layout_constraintBottom_toTopOf="@+id/relayPrivacy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/maintxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="@dimen/margin_20dp"
            android:layout_marginTop="@dimen/margin_20dp"
            android:layout_marginEnd="@dimen/margin_20dp"
            android:text="@string/common_signin_button_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/background_color"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextPhone"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/maintxt"
            android:layout_marginStart="@dimen/padding_10"
            android:layout_marginTop="@dimen/margin_20dp"
            android:layout_marginEnd="@dimen/padding_10"
            android:background="@drawable/edittext"
            android:hint="@string/phone_num"
            android:inputType="phone"
            android:maxLength="20"
            android:maxLines="1"
            android:paddingHorizontal="@dimen/padding_10"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            android:textCursorDrawable="@drawable/curser_drawable"
            android:textSize="20sp"
            android:textStyle="bold"
            app:hintTextColor="@color/black" />

        <androidx.cardview.widget.CardView
            android:id="@+id/emailsubmit"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_below="@+id/editTextPhone"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="15dp"
            android:layout_marginTop="@dimen/margin_20dp"
            android:layout_marginEnd="15dp"
            android:layout_weight="1"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:divider="@android:color/transparent"
            android:dividerHeight="0.0px"
            android:elevation="8dp"
            app:cardCornerRadius="10dp"
            card_view:cardElevation="7dp"
            card_view:cardPreventCornerOverlap="false">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/open_sans_bold"
                android:gravity="center"
                android:text="@string/submit"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </androidx.cardview.widget.CardView>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:visibility="gone"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/emailsubmit"
            android:layout_alignParentBottom="true" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relayPrivacy"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent">

        <CheckBox
            android:id="@+id/chkPrivacy"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:buttonTint="@color/white" />

        <TextView
            android:id="@+id/tvPrivacy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toEndOf="@id/chkPrivacy"
            android:gravity="center"
            android:padding="@dimen/margin_10dp"
            android:text="@string/term_privacy"
            android:textColor="@color/white"
            android:textSize="@dimen/text_12sp"
            android:textStyle="bold"
            android:visibility="visible" />

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>